--- a/templates/composants/navbar.html.twig
+++ b/templates/composants/navbar.html.twig
@@ -1,34 +1,52 @@
-<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar  fixed-top ftco-navbar-light header" id="ftco-navbar navbar">
+<div id="sticky-header" class="main-header-area">
     <div class="container">
-        <div class="col-md-6" style="border:1px solid red;">
-            <a class="navbar-brand text-orange" href="index.html">
-                Hop Hop Hop Livraison
-            </a>
+        <div class="header_bottom_border">
+            <div class="row align-items-center">
+                <div class="col-xl-3 col-lg-2">
+                    <div class="logo">
+                        <a href="index.html">
+                            <img src="{{asset('assets/img/logo.png')}}" alt="">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-xl-6 col-lg-7">
+                    <div class="main-menu  d-none d-lg-block">
+                        <nav>
+                            <ul id="navigation">
+                                <li><a class="active" href="index.html">home</a></li>
+                                <li><a href="about.html">About</a></li>
+                                <li><a href="service.html">Services</a></li>
+                                <li><a href="#">blog <i class="ti-angle-down"></i></a>
+                                    <ul class="submenu">
+                                        <li><a href="blog.html">blog</a></li>
+                                        <li><a href="single-blog.html">single-blog</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#">pages <i class="ti-angle-down"></i></a>
+                                    <ul class="submenu">
+                                            <li><a href="elements.html">elements</a></li>
+                                        <li><a href="Portfolio.html">Portfolio</a></li>
+                                        <li><a href="portfolio_details.html">Portfolio details</a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="contact.html">Contact</a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="col-xl-3 col-lg-3 d-none d-lg-block">
+                    <div class="Appointment">
+                        <div class="search_button">
+                            <a href="#">
+                                <i class="ti-search"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="mobile_menu d-block d-lg-none"></div>
+                </div>
+            </div>
         </div>
-        <div class="col-md-6 text-flex">
-            <div class="btn btn-outline-white btn-client text-white">
-                <i class="fas fa-user text-white-link"></i>
-                <a class="btn btn-client text-white-link" href="07">
-                    Espace client
-                </a>
-            </div>
-            <div class="btn bg-orange">
-                <a class="btn bg-orange text-white" href="#">
-                    Demandez un devis
-                </a>
-            </div>
-            <div class="btn bg-white">
-                <i class="fas fa-phone-alt"></i>
-                <a class="btn bg-white" href="0766638002">
-                    07 66 63 80 02
-                </a>
-            </div>
-        </div>
-        <button class="navbar-toggler"
-            type="button" data-toggle="collapse"
-            data-target="#ftco-nav" aria-controls="ftco-nav"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="oi oi-menu"></span> Menu
-        </button>
     </div>
-</nav>
+</div>
