--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,13 @@
         <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         <script src="https://kit.fontawesome.com/35c69bda3a.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="{{ asset('assets/styles/property.css') }}">
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="{{asset('assets/scripts/dontCopydontPaste.js')}}"></script>
+        <script src="{{asset('assets/scripts/addError.js')}}"></script>
+        <script src="{{asset('assets/scripts/manyFunctions.js')}}"></script>
+        <script src="{{asset('assets/scripts/verifyData.js')}}"></script>
+        <script src="{{asset('assets/scripts/addError.js')}}"></script>
+        <script src="{{asset('assets/scripts/sending.js')}}"></script>
         <script src="{{asset('assets/scripts/sendData.js')}}"></script>
         <!-- <link rel="stylesheet" href="css/responsive.css"> -->
     </head>
@@ -76,6 +83,8 @@
                 <div class="single_slider  d-flex align-items-center slider_bg_2 overlay2">
                 </div>
             </div>
+        </div>
+        <div class="form-sending alert text-center mt-2 mb-2">
         </div>
         <!-- slider_area_end -->
         <div class="container">
@@ -180,7 +189,6 @@
         </footer>
         <!--/ footer end  -->
         <!-- JS here -->
-        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
         <script src="{{ asset('assets/js/vendor/modernizr-3.5.0.min.js') }}"></script>
         <script src="{{ asset('assets/js/vendor/jquery-1.12.4.min.js') }}"></script>
         <script src="{{ asset('assets/js/popper.min.js') }}"></script>
