--- a/templates/composants/informations.html.twig
+++ b/templates/composants/informations.html.twig
@@ -17,9 +17,11 @@
                             </a>
                         </div>
                         <div>
-                            <button type="button" class="btn btn-orange">
-                                Demandez un devis
-                            </button>
+                            <a href="{{path('devis')}}">
+                                <button type="button" class="btn btn-orange">
+                                    Demandez un devis
+                                </button>
+                            </a>
                         </div>
                     </div>
                 </div>
