--- a/public/assets/styles/property.css
+++ b/public/assets/styles/property.css
@@ -66,7 +66,6 @@ input[type=number]  {
     cursor: pointer;
     user-select: none;
     background-image: none;
-    border: 1px solid transparent;
     border-radius: 4px;
 }
 
@@ -86,7 +85,6 @@ input[type=number]  {
     cursor: pointer;
     user-select: none;
     background-image: none;
-    border: 1px solid transparent;
     border-radius: 4px;
 }
 
@@ -111,7 +109,6 @@ input[type=number]  {
     cursor: pointer;
     user-select: none;
     background-image: none;
-    border: 1px solid transparent;
     border-radius: 4px;
 }
 .text-center{
@@ -169,6 +166,13 @@ h2.text-presentation, h2.text-contact{
     margin-top: 30%;
 }
 
+.password_lost{
+    text-decoration: underline;
+    color:#00f;
+}
+.password_lost:hover {
+    color:#00f;
+}
 /***    MEDIA QUERIES    ***/
 
 /*
@@ -181,7 +185,13 @@ h2.text-presentation, h2.text-contact{
         overflow: hidden;
         overflow-y: scroll;
     }
-
+    .password_lost{
+        text-decoration: underline;
+        color:#00f;
+    }
+    .password_lost:active {
+        color:#00f;
+    }
     .containerTitle{
         margin-top: 30%;
     }
@@ -200,7 +210,13 @@ h2.text-presentation, h2.text-contact{
     #presentations, #contact{
         background-color: #6E6E6E;
     }
-    
+    .password_lost{
+        text-decoration: underline;
+        color:#00f;
+    }
+    .password_lost:active {
+        color:#00f;
+    }
     .containerTitle{
         margin-top: 50%;
     }
@@ -225,7 +241,13 @@ h2.text-presentation, h2.text-contact{
     .containerTitle{
         margin-top: 40%;
     }
-
+    .password_lost{
+        text-decoration: underline;
+        color:#00f;
+    }
+    .password_lost:active {
+        color:#00f;
+    }
     .containerTitle{
         margin-top: 50%;
     }
@@ -247,7 +269,13 @@ h2.text-presentation, h2.text-contact{
     #presentations, #contact{
         background-color: #6E6E6E;
     }
-    
+    .password_lost{
+        text-decoration: underline;
+        color:#00f;
+    }
+    .password_lost:active {
+        color:#00f;
+    }
     .containerTitle{
         margin-top: 40%;
     }
@@ -267,7 +295,13 @@ h2.text-presentation, h2.text-contact{
     #presentations, #contact{
         background-color: #6E6E6E;
     }
-    
+    .password_lost{
+        text-decoration: underline;
+        color:#00f;
+    }
+    .password_lost:active {
+        color:#00f;
+    }
     .text-presentations{
         font-size:1rem;
         font-weight: bold;
